bd mySQL default

--- a/src/appweb/appsettings.json
+++ b/src/appweb/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=WebApplication.db"
+    "DefaultConnection": "Server=127.0.0.1;Port=3306;Database=ymazieres;Uid=ymazieres;Pwd=ymazieres;"
   },
   "Logging": {
     "IncludeScopes": false,
